# civil-complaint-ai

./: .flake8  .gitignore  OPENAI_SETUP.md  README.md  answer.py  main.py  prompt_flow.txt  pyproject.toml  rag_multi_test.py  requirements.txt  run_graph.py  train_test.py
.github/workflows/: ci.yml
complaint_system_AI-main/: bandit_prompt_system.py  complain_quality_shap.py
data/: examples.csv
src/: config.py
src/graph/: workflow.py
src/models/: feature_cols.joblib  rf_model.joblib  shap_explainer.joblib  state.py
src/nodes/: civi_complaint_node.py  civil_complaint_node.py  draft_reply_node.py  final_answer_node.py  generate_strategy_node.py  refine_query_node.py  retrieve_node.py  verify_reply_node.py
src/tools/: civil_rag_tool.py
src/utils/: answer_generator.py  kanana_generator.py  kanana_retriever.py  multi_view_generator.py  prompts.py  rag_helper_chroma.py
tests/: test_civi_complaint_node.py  test_civil_complaint_node.py  test_draft_reply_node.py  test_final_answer_node.py  test_generate_strategy_node.py  test_refine_query_node.py  test_verify_reply_node.py
web/: clone_제안신청_info_refined.txt  refine_clone_info.py
web/clone/: index.html  package-lock.json  package.json
web/clone/src/: App.jsx
web/clone/src/components/Layout/: Footer.jsx  Header.jsx  Sidebar.jsx
web/clone/src/pages/: ProposalList.jsx
web/clone/src/styles/: GlobalStyle.js
web/clone_prompt/: clone_info.txt  clone_stack_prompt.txt  clone_공개제안_info_refined.txt  clone_제안신청_info.txt  clone_처리기관_info.txt  clone_처리기관_info_refined.txt  refine_clone_info.py
(+5 files in other folders)
